--- a/DvachBrowser3/Views/Partial/PostText.xaml
+++ b/DvachBrowser3/Views/Partial/PostText.xaml
@@ -9,6 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Padding="4" x:Name="MainGrid">
+    <Grid Padding="4" x:Name="MainGrid" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+        <Grid x:Name="ScrollablePlaceholderGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Grid>
     </Grid>
 </UserControl>
